testdata/tests/cases/compiler/declareGlobalLuauStyle.tlua
// @strict: true

// @filename: globals.d.tlua
declare version: string;
declare limits: { min: number, max: number };

// @filename: main.tlua
local n: number = limits.min;
local s: string = version;
version = "overwritten"; // error: constant
limits = { min = 0, max = 1 }; // error: constant
local bad: boolean = version; // error: string not boolean
